[package]
name = "gensokyoradio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
protobuf = "3.2.0"
protobuf-codegen = "3.2.0"

[dependencies]
protobuf = "3.2.0"
serde = {version = "1.0.84", features = ["derive"]}
serde_json = "1.0.78"
websocket = "0.24.0"
tokio = { version = "1.0.0", default-features = false, features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "time"] }
url = "2.0.0"
tokio-tungstenite = { version = "0.18.0", default-features = true, features = ["native-tls"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
chrono = "0.4.24"
dirs = "5.0.0"
reqwest = "0.11.16"
notify-rust = "4.8.0"
futures = "0.3.28"
env_logger = "0.10.0"
log = "0.4.17"
